--- a/package.json
+++ b/package.json
@@ -34,7 +34,21 @@
 		"del": "rm -rf node_modules build"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.20.12",
+		"@babel/eslint-parser": "^7.19.1",
+		"@babel/preset-env": "^7.20.2",
 		"@babel/register": "^7.18.9",
-		"gulp": "^4.0.2"
+		"browser-sync": "^2.27.11",
+		"del": "^7.0.0",
+		"gulp": "^4.0.2",
+		"gulp-file-include": "^2.3.0",
+		"gulp-htmlmin": "^5.0.1",
+		"gulp-if": "^3.0.0",
+		"gulp-newer": "^1.4.0",
+		"gulp-notify": "^4.0.0",
+		"gulp-plumber": "^1.2.1",
+		"gulp-rename": "^2.0.0",
+		"gulp-replace": "^1.1.4",
+		"gulp-size": "^4.0.1"
 	}
 }
