--- a/package.json
+++ b/package.json
@@ -40,8 +40,15 @@
 		"@babel/register": "^7.18.9",
 		"browser-sync": "^2.27.11",
 		"del": "^7.0.0",
+		"eslint": "^8.33.0",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-plugin-import": "^2.27.5",
 		"gulp": "^4.0.2",
+		"gulp-autoprefixer": "^8.0.0",
+		"gulp-babel": "^8.0.0",
+		"gulp-clean-css": "^4.3.0",
 		"gulp-file-include": "^2.3.0",
+		"gulp-group-css-media-queries": "^1.2.2",
 		"gulp-htmlmin": "^5.0.1",
 		"gulp-if": "^3.0.0",
 		"gulp-newer": "^1.4.0",
@@ -49,6 +56,21 @@
 		"gulp-plumber": "^1.2.1",
 		"gulp-rename": "^2.0.0",
 		"gulp-replace": "^1.1.4",
-		"gulp-size": "^4.0.1"
+		"gulp-sass": "^5.1.0",
+		"gulp-shorthand": "^1.1.0",
+		"gulp-size": "^4.0.1",
+		"gulp-webpcss": "^1.1.1",
+		"prettier": "^2.8.3",
+		"sass": "^1.58.0",
+		"stylelint": "^14.16.1",
+		"stylelint-config-rational-order": "^0.1.2",
+		"stylelint-config-standard-scss": "^6.1.0",
+		"stylelint-order": "^6.0.1",
+		"webp-converter": "2.2.3",
+		"webpack": "^5.75.0",
+		"webpack-stream": "^7.0.0"
+	},
+	"dependencies": {
+		"@babel/polyfill": "^7.12.1"
 	}
 }
