--- a/package.json
+++ b/package.json
@@ -59,13 +59,18 @@
 		"gulp-sass": "^5.1.0",
 		"gulp-shorthand": "^1.1.0",
 		"gulp-size": "^4.0.1",
+		"gulp-ttf2woff": "^1.1.1",
+		"gulp-ttf2woff2": "^4.0.1",
+		"gulp-util": "^3.0.8",
 		"gulp-webpcss": "^1.1.1",
+		"gulp-zip": "^5.1.0",
 		"prettier": "^2.8.3",
 		"sass": "^1.58.0",
 		"stylelint": "^14.16.1",
 		"stylelint-config-rational-order": "^0.1.2",
 		"stylelint-config-standard-scss": "^6.1.0",
 		"stylelint-order": "^6.0.1",
+		"vinyl-ftp": "^0.6.1",
 		"webp-converter": "2.2.3",
 		"webpack": "^5.75.0",
 		"webpack-stream": "^7.0.0"
