--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"gulp-group-css-media-queries": "^1.2.2",
 		"gulp-htmlmin": "^5.0.1",
 		"gulp-if": "^3.0.0",
+		"gulp-imagemin": "^8.0.0",
 		"gulp-newer": "^1.4.0",
 		"gulp-notify": "^4.0.0",
 		"gulp-plumber": "^1.2.1",
@@ -62,6 +63,8 @@
 		"gulp-ttf2woff": "^1.1.1",
 		"gulp-ttf2woff2": "^4.0.1",
 		"gulp-util": "^3.0.8",
+		"gulp-webp": "^4.0.1",
+		"gulp-webp-html": "^1.0.2",
 		"gulp-webpcss": "^1.1.1",
 		"gulp-zip": "^5.1.0",
 		"prettier": "^2.8.3",
