--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@babel/eslint-parser": "^7.19.1",
 		"@babel/preset-env": "^7.20.2",
 		"@babel/register": "^7.18.9",
+		"@prettier/plugin-pug": "^2.4.1",
 		"browser-sync": "^2.27.11",
 		"del": "^7.0.0",
 		"eslint": "^8.33.0",
@@ -47,7 +48,9 @@
 		"gulp-autoprefixer": "^8.0.0",
 		"gulp-babel": "^8.0.0",
 		"gulp-clean-css": "^4.3.0",
+		"gulp-favicons": "^3.0.0",
 		"gulp-file-include": "^2.3.0",
+		"gulp-filter": "^7.0.0",
 		"gulp-group-css-media-queries": "^1.2.2",
 		"gulp-htmlmin": "^5.0.1",
 		"gulp-if": "^3.0.0",
@@ -55,11 +58,14 @@
 		"gulp-newer": "^1.4.0",
 		"gulp-notify": "^4.0.0",
 		"gulp-plumber": "^1.2.1",
+		"gulp-pug": "^5.0.0",
 		"gulp-rename": "^2.0.0",
 		"gulp-replace": "^1.1.4",
 		"gulp-sass": "^5.1.0",
 		"gulp-shorthand": "^1.1.0",
 		"gulp-size": "^4.0.1",
+		"gulp-svg-sprite": "^2.0.1",
+		"gulp-svgo": "^2.2.1",
 		"gulp-ttf2woff": "^1.1.1",
 		"gulp-ttf2woff2": "^4.0.1",
 		"gulp-util": "^3.0.8",
@@ -68,6 +74,7 @@
 		"gulp-webpcss": "^1.1.1",
 		"gulp-zip": "^5.1.0",
 		"prettier": "^2.8.3",
+		"pug-lint": "^2.6.0",
 		"sass": "^1.58.0",
 		"stylelint": "^14.16.1",
 		"stylelint-config-rational-order": "^0.1.2",
